k8s/istio/address-service-versioned.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: address-service-versioned
spec:
  hosts:
    - address-service.happyride.svc.cluster.local
  http:
    - name: "address-service-http"
      route:
        - destination:
            host: address-service.happyride.svc.cluster.local
            subset: v1
