k8s/istio/address-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: address-service
spec:
  hosts:
    - address-service
  http:
    - name: "address-service-http"
      route:
        - destination:
            host: address-service
          headers:
            response:
              add:
                x-hello: world
