k8s/istio/keycloak-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
    - happyride.com
  gateways:
    - app-gateway  
  http:
    - name: "keycloak-service"
      match:
        - uri:
            prefix: "/auth"     
      route:
        - destination:
            host: keycloak.happyride.svc.cluster.local
