k8s/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - virtual-service
  http:
    - name: "virtual-service-http"
      match:
        - uri:
            prefix: "/test"
      route:
        - destination:
            host: address-service
          headers:
            response:
              add:
                x-from: virtual
